Fix overflow issues

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,3 +1,10 @@
+html,
+body {
+    width: 100%;
+    min-height: 100vh;
+    overflow-x: hidden;
+}
+
 *[id] {
     scroll-margin-top: 58px;
 }
